feat: student class enrollment and unenrollment
